# Miner-Detector

./: .env  .gitignore  .pre-commit-config.yaml  README.md  cli.py  logs_scanner.py  miner-detect-script.py  processes_logs_scanner.py  pyproject.toml  requirements.txt  start_server.sh
.github/workflows/: black-check.yml
cli-scanner/cli-scanner/: cli.py  logs_scanner.py  processes_logs_scanner.py
cli-scanner/src/: cli.py  processes_logs_scanner.py  util.py
cli-scanner/src/cli/: cli.py  processes_logs_scanner.py  util.py
cli_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: main.py
src/cli/: cli.py  processes_logs_scanner.py  util.py
src/cli_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/core/: cpu_gpu_scanner.py  jsfile_scanner.py  logs_scanner.py  network_scanner.py  processes_logs_scanner.py  processes_scannes.py  url_scanner.py  util.py
src/core/extentions/: manifest.json  popup.html  popup.js
src/extentions/: popup.html  popup.js
src/scanner/: main.py
src/scanner_main/: main.py
src/services/: cli.py  daemon.py  daemon_tool.py
src/services/web-server/: server.py
tests/unittests/: test.py
tests/unittests/core/: test_utils.py
web-server/: server.py
webServer/: server.py
