[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-scanner"
version = "0.1.0"
description = "Tool to scan system to detect potential mining activity."
authors = [
    {name = "Mariia Ivanchenko", email = "ivanchenko.pn@ucu.edu.ua"},
    {name = "Khrystyna Mysak", email = "mysak.pn@ucu.edu.ua"},
    {name = "Dzvenyslava Butynets", email = "butynets.pn@ucu.edu.ua"},
]
readme = "README.md"
dependencies = [
    "GPUtil==1.4.0",
    "psutil==7.0.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "Flask==3.1.0",
    "python-nmap==0.7.1",
    "pytest==8.3.4",
    "flask_cors"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cli-scanner = "scanner_main.main:main"

[project.urls]
"Homepage" = "https://github.com/dzvinka123/Miner-Detector"